- Chamada api robo.

--- a/RoboWeb/RoboWeb.csproj
+++ b/RoboWeb/RoboWeb.csproj
@@ -223,6 +223,12 @@
       <DependentUpon>Web.config</DependentUpon>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\RoboServices\RoboServices.csproj">
+      <Project>{25712011-32AF-4395-B25E-12BCB04D68B5}</Project>
+      <Name>RoboServices</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
