--- a/RoboModels/RoboModels.csproj
+++ b/RoboModels/RoboModels.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{25712011-32AF-4395-B25E-12BCB04D68B5}</ProjectGuid>
+    <ProjectGuid>{F957EE10-1BCC-4749-9F99-44CDB754D413}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>RoboServices</RootNamespace>
-    <AssemblyName>RoboServices</AssemblyName>
+    <RootNamespace>RoboModels</RootNamespace>
+    <AssemblyName>RoboModels</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -31,11 +31,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.11.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -45,13 +41,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Constants\ServicoApiRoboConstant.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RoboInterfaces\IRoboService.cs" />
-    <Compile Include="RoboServices\RoboService.cs" />
+    <Compile Include="RoboEnum\RoboPosicaoBracoEnum.cs" />
+    <Compile Include="RoboModels\RoboBracoModel.cs" />
+    <Compile Include="RoboModels\RoboCotoveloModel.cs" />
+    <Compile Include="RoboModels\RoboModel.cs" />
+    <Compile Include="RoboModels\RoboPulsoModel.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <None Include="packages.config" />
-  </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
