--- a/RoboModels/RoboModels.csproj
+++ b/RoboModels/RoboModels.csproj
@@ -43,7 +43,10 @@
   <ItemGroup>
     <Compile Include="Constants\ServicoApiRoboConstant.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RoboEnum\RoboCodigoMovimentoBracoEnum.cs" />
+    <Compile Include="RoboEnum\RoboCodigoMovimentoCabecaEnum.cs" />
     <Compile Include="RoboEnum\RoboPosicaoBracoEnum.cs" />
+    <Compile Include="RoboModels\RoboApiModel.cs" />
     <Compile Include="RoboModels\RoboBracoModel.cs" />
     <Compile Include="RoboModels\RoboCotoveloModel.cs" />
     <Compile Include="RoboModels\RoboModel.cs" />
